tests/NormalTests/paczka1/small_fuzzy/52127937.err
Error in line 2: UmqOzeStim A747 45,0
Error in line 5: UmqOzeStim A499 76,7
Error in line 1: 9KaQdkK S127 5,4
Error in line 16: EINwM A~4~ 132,4
